--- a/src/assets/scss/_set-password.scss
+++ b/src/assets/scss/_set-password.scss
@@ -16,6 +16,7 @@
                     height: 50px;
                     border-radius: 0;
                     color: $text-dark;
+                    border: none;
                     &.gray {
                         color: #808080;
                     }
